# project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: input.hpp  io.hpp  lotka_volterra.hpp  output.hpp  renderer.hpp  simulation.hpp
io/: input.cpp  output.cpp  output.hpp
src/: main.cpp  namespace.hpp  renderer.cpp  renderer.hpp  simulation.cpp  simulation.hpp
test/: renderer_test.cpp  simulation_test.cpp
